fix dark mode ui

--- a/src/components/AudioPlayer/RepeatAudioModal/RepeatSetting.module.scss
+++ b/src/components/AudioPlayer/RepeatAudioModal/RepeatSetting.module.scss
@@ -1,6 +1,7 @@
-@use "src/styles/breakpoints";
+@use 'src/styles/breakpoints';
 
 .inputContainer {
+  color: var(--color-text-default);
   display: flex;
   align-items: center;
   @include breakpoints.smallerThanMobileM {
