--- a/src/components/dls/Counter/Counter.module.scss
+++ b/src/components/dls/Counter/Counter.module.scss
@@ -3,6 +3,7 @@
   align-items: center;
 }
 .count {
+  color: var(--color-text-default);
   padding-left: var(--spacing-medium);
   padding-right: var(--spacing-medium);
 }
